chore: change BlogCard to BlogLayout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "@lib/*": [
         "lib/*"
+      ],
+      "@layouts/*": [
+        "layouts/*"
       ]
     },
     "plugins": [
